# fastapi-trading-app-example

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api_spec.yaml  pyproject.toml  task_requirements.md
tests/: Dockerfile  README.md  api_test.py  conftest.py  performance_test.py  pyproject.toml  schemas.py  websocket_test.py
tests/tests/: api_test.py  websocket_test.py
tests/tests/schemas/: error.py  order.py
tests/utils/: api_client.py
trading_app/: __main__.py
trading_app/db/: database.py  database_interface.py
trading_app/db/models/: errors.py  order.py
trading_app/endpoints/: orders.py  websocket.py
trading_app/logic/: observer_interface.py  order_service.py  websocket_manager.py
trading_app/schemas/: order.py
