[tool.poetry]
name = "trading-app-tests"
version = "0.1.0"
description = "Tests for trading simulation server"
authors = ["Lentsi Denis <Lentsi.Denis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.18.4"
pytest = "^7.4.0"
requests = "^2.31.0"
websockets = "^11.0.3"
aiohttp = "^3.8.4"
pytest-asyncio = "^0.21.1"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
